styles.css
body {
    margin: 0;
    padding: 0;
    height: 100vh;
    display: flex;
    align-items: center;
    justify-content: center;
    background: url('img010-edit.png') fixed;    
    background-size: cover;
    font-family: Happy Times;
    font-style: normal;
    font-weight: normal;
    font-size: 1.25vw;
}

.container {
    color: black;
    z-index: 1;
}

h1 {
    font-size: 7.5em;
    font-family: 'Happy Times', serif;
    font-weight:normal;
    font-style:italic;
    letter-spacing: -2px;
    line-height:0.9em;
    top:50px;
    left:50px;
    position: absolute;
    text-align: left;
    margin:0;
    padding:0;
}

h2 {
    font-size: 7.5em;
    font-family: 'Happy Times', serif;
    font-weight:normal;
    font-style:italic;
    letter-spacing: -2px;
    line-height:0.9em;
    bottom:50px;
    right:50px;
    position: absolute;
    text-align: right;
    margin:0;
    padding:0;
}

h3 {
    left:50px;
    bottom:50px;
    position:absolute;
    text-align:left;
    margin:0;
    padding:0;
    font-size:1.5em;
}

@media (max-width: 700px) {

    h1{
        letter-spacing:0em;
        font-size:12em;
        top:30px;
        left:30px;
    }

    h2{
        letter-spacing: 0em;
        font-size:12em;
        bottom:30px;
        right:30px;
    }

    h3 {
        left:33%;
        bottom:50%;
        text-align:center;
        font-size:3em;
    }
}

